@@ -178,9 +178,9 @@ public interface PermissionsInterface {
      */
     static List<Permission> mergePermissions(List<Permission> dockstoreOwners, List<Permission> nativePermissions) {
         final ArrayList<Permission> permissions = new ArrayList<>(dockstoreOwners);
-        final Set<String> dockstoreOwnerEmails = permissions.stream().map(p -> p.getEmail()).collect(Collectors.toSet());
+        final Set<String> dockstoreOwnerEmails = permissions.stream().map(Permission::getEmail).collect(Collectors.toSet());
         permissions.addAll(nativePermissions.stream()
-                .filter(p -> !dockstoreOwnerEmails.contains(p.getEmail())).collect(Collectors.toList()));
+                .filter(p -> !dockstoreOwnerEmails.contains(p.getEmail())).toList());
         return permissions;
     }
 
